feat: :bug: Update loading pic

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,7 +116,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--grey_app_background);
   scroll-behavior: smooth;
-  cursor: url("https://firebasestorage.googleapis.com/v0/b/polkassembly-backend.appspot.com/o/public%2Fcursor.svg?alt=media&token=c2350867-019a-4f1c-b3ee-e75542122e2b"), default !important;
+  cursor: url("https://firebasestorage.googleapis.com/v0/b/polkassembly-backend.appspot.com/o/public%2Fcursor.svg?alt=media&token=c2350867-019a-4f1c-b3ee-e75542122e2b"), pointer !important;
   font-family: var(--font_default), "Poppins", -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif, "Space Grotesk", "Pixeboy", "Pixelify Sans";
