--- a/styles/globals.css
+++ b/styles/globals.css
@@ -999,3 +999,11 @@ body.dark-theme .ant-menu .ant-menu-submenu-arrow {
 .dark .ant-steps .ant-steps-item-wait .ant-steps-item-icon {
   background-color: #dde4ed !important;
 }
+
+.image-dark {
+  filter: brightness(0) saturate(100%) invert(69%) sepia(37%) saturate(0%) hue-rotate(249deg) brightness(86%) contrast(87%);
+}
+
+.image-light {
+  filter: brightness(0) saturate(100%) invert(33%) sepia(14%) saturate(1156%) hue-rotate(174deg) brightness(102%) contrast(92%);
+}
