feat: community delegation tab

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@
   --blue: #3C74E1;
   --green_primary: #4dd18f;
   --green_secondary: #399969;
+  --green_tertiary: #11B04A;
   --grey_app_background: #eaeef0;
   --grey_border: #dde4ed;
   --grey_stroke: #D2D8E0;
@@ -33,6 +34,7 @@
   --icon_grey: #c2cfe0;
   --nav_black: #1e1e28;
   --pink_primary: #e5007a;
+  --grey_primary_transparent: rgba(216, 216, 216, 0.05);
   --pink_primary_transparent: rgba(229, 0, 122, 0.5);
   --pink_secondary: #c40061;
   --pink_light: #ea729d;
