Fix CSS syntax in globals.css for popup container styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1017,7 +1017,7 @@ body.dark-theme .ant-menu .ant-menu-submenu-arrow {
 .mdxeditor-popup-container .popupContainer {
     z-index: 1000 !important;
     --basePageBg: #1c1d1f;
-} */
+}
   /* Style dialog elements with theme colors */
 .mdxeditor-popup-container [role='dialog'] {
     background-color: var(--baseBase); 
